# simple-web-app-rust

./: Cargo.toml  README.md  crud.db
migrations/2022-02-26-190409_create_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/html/: home.html  layout.html  next.html  table.html
