[package]
name = "simple-web-app-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.6"
minijinja = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.31"
tracing-subscriber = { version="0.3.9", features = ["env-filter"] }
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
anyhow = "1.0.55"
chrono = "0.4.19"